log
Thu 09 May 2024 09:15:24 PM UTC: 
 tests:  1|8
total_score: 0/70
825f829
Thu 09 May 2024 09:32:20 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b82de08
Thu 09 May 2024 09:34:11 PM UTC: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2d61d09
Thu 09 May 2024 09:35:32 PM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  5|7
total_score: 5/70
813e8ec
Thu 09 May 2024 09:37:37 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  12|6
total_score: 15/70
6840cd1
Thu 09 May 2024 09:38:09 PM UTC: 
 treemap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  12|6
total_score: 15/70
228bd5e
Thu 09 May 2024 09:41:41 PM UTC: 
 treemap.c | 42 +++++-------------------------------------
 1 file changed, 5 insertions(+), 37 deletions(-)
 tests:  13|5
total_score: 15/70
7ce3967
Thu 09 May 2024 09:43:02 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 20/70
e98606b
Thu 09 May 2024 09:45:07 PM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  0|0
511ef49
Thu 09 May 2024 09:45:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:123:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  123 |     return ub;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
580fff8
Thu 09 May 2024 09:46:00 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54cfb57
Thu 09 May 2024 09:46:57 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  19|3
total_score: 30/70
c657063
Thu 09 May 2024 09:51:58 PM UTC: 
 treemap.c | 39 +++++++++++++++++++++++++++++----------
 1 file changed, 29 insertions(+), 10 deletions(-)
 tests:  20|3
total_score: 30/70
bb7cc54
Thu 09 May 2024 09:52:42 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  21|2
total_score: 40/70
3e1621f
Thu 09 May 2024 09:52:56 PM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  21|2
total_score: 40/70
6acd314
Thu 09 May 2024 09:56:17 PM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:113:24: error: unused variable ‘grandparent’ [-Werror=unused-variable]
  113 |             TreeNode * grandparent = node->parent;
      |                        ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
83f0fe6
Thu 09 May 2024 09:56:30 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
4c6e1f1
Thu 09 May 2024 09:56:42 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
a3fe4ae
Thu 09 May 2024 09:57:17 PM UTC: 
 treemap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  0|0
4aa59e7
Thu 09 May 2024 09:59:26 PM UTC: 
 treemap.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  0|0
8c22ca8
Thu 09 May 2024 10:06:51 PM UTC: 
 treemap.c | 34 +++++++++++++---------------------
 1 file changed, 13 insertions(+), 21 deletions(-)
 tests:  0|0
c90f051
Thu 09 May 2024 10:07:34 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
16d3d4a
Thu 09 May 2024 10:09:27 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
5aa9422
Thu 09 May 2024 10:10:06 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  21|2
total_score: 40/70
36c16e8
Thu 09 May 2024 10:12:50 PM UTC: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 55/70
d816a78
Thu 09 May 2024 10:14:35 PM UTC: 
 treemap.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:109:9: error: ‘TreeNode’ has no member named ‘key’
  109 |     node->key = minimumNode->key; // Copiamos solo la clave del nodo más pequeño al nodo a eliminar
      |         ^~
treemap.c:109:28: error: ‘TreeNode’ has no member named ‘key’
  109 |     node->key = minimumNode->key; // Copiamos solo la clave del nodo más pequeño al nodo a eliminar
      |                            ^~
treemap.c:110:9: error: ‘TreeNode’ has no member named ‘value’
  110 |     node->value = minimumNode->value; // Copiamos el valor asociado
      |         ^~
treemap.c:110:30: error: ‘TreeNode’ has no member named ‘value’
  110 |     node->value = minimumNode->value; // Copiamos el valor asociado
      |                              ^~
Compilation failed
3a7b3df
Thu 09 May 2024 10:15:19 PM UTC: 
 treemap.c | 15 ++-------------
 1 file changed, 2 insertions(+), 13 deletions(-)
 tests:  0|0
93f260d
Thu 09 May 2024 10:20:10 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
fa236a4
Thu 09 May 2024 10:21:53 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  26|1
total_score: 55/70
f8779a3
Sun 12 May 2024 03:07:49 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
e1ca742
Sun 12 May 2024 03:14:29 AM UTC: 
 treemap.c | 79 ++++++++++++++++++++++++++++++++++++++++++++++++---------------
 1 file changed, 61 insertions(+), 18 deletions(-)
In file included from test.c:4:
treemap.c:132:1: error: stray ‘`’ in program
  132 | ``` // If the node to be removed is the left child of the parent
      | ^
treemap.c:132:2: error: stray ‘`’ in program
  132 | ``` // If the node to be removed is the left child of the parent
      |  ^
treemap.c:132:3: error: stray ‘`’ in program
  132 | ``` // If the node to be removed is the left child of the parent
      |   ^
treemap.c:133:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
  133 |                 parent->left = NULL;
      |                       ^~
treemap.c:134:13: error: expected identifier or ‘(’ before ‘else’
  134 |             else // If the node to be removed is the right child of the parent
      |             ^~~~
treemap.c:136:9: error: expected identifier or ‘(’ before ‘}’ token
  136 |         }
      |         ^
treemap.c:137:5: error: expected identifier or ‘(’ before ‘}’ token
  137 |     }
      |     ^
treemap.c:138:5: error: expected identifier or ‘(’ before ‘else’
  138 |     else if (node->left != NULL && node->right != NULL) // If the node to be removed has two children
      |     ^~~~
treemap.c:144:5: error: expected identifier or ‘(’ before ‘else’
  144 |     else // If the node to be removed has one child
      |     ^~~~
treemap.c:161:5: error: data definition has no type or storage class [-Werror]
  161 |     free(node); // Free the memory of the removed node
      |     ^~~~
treemap.c:161:5: error: type defaults to ‘int’ in declaration of ‘free’ [-Werror=implicit-int]
treemap.c:161:5: error: parameter names (without types) in function declaration [-Werror]
treemap.c:161:5: error: conflicting types for ‘free’; have ‘int()’
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:555:13: note: previous declaration of ‘free’ with type ‘void(void *)’
  555 | extern void free (void *__ptr) __THROW;
      |             ^~~~
In file included from test.c:4:
treemap.c:162:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
  162 |     tree->current = parent; // Update the current node to the parent
      |         ^~
treemap.c:163:1: error: expected identifier or ‘(’ before ‘}’ token
  163 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
39aa826
Sun 12 May 2024 03:18:11 AM UTC: 
 treemap.c | 79 +++++++++++++++------------------------------------------------
 1 file changed, 18 insertions(+), 61 deletions(-)
 tests:  0|0
b31ef0d
Sun 12 May 2024 03:26:25 AM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:97:24: error: statement with no effect [-Werror=unused-value]
   97 |             node->left == NULL;
      |                        ^
treemap.c:101:25: error: statement with no effect [-Werror=unused-value]
  101 |             node->right == NULL;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
1f0ee3a
